--- a/xxl-job-admin/src/main/resources/i18n/message_zh_CN.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message_zh_CN.properties
@@ -155,6 +155,8 @@ jobinfo_conf_base=基础配置
 jobinfo_conf_schedule=调度配置
 jobinfo_conf_job=任务配置
 jobinfo_conf_advanced=高级配置
+alarm_type=告警类型
+alarm_config=告警配置
 
 ## job log
 joblog_name=调度日志
