--- a/xxl-job-admin/src/main/resources/i18n/message_zh_TC.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message_zh_TC.properties
@@ -274,3 +274,6 @@ user_update_loginuser_limit=禁止操作當前登入帳號
 ## help
 job_help=使用教程
 job_help_document=官方文件
+alarm_type=告警类型
+alarm_config=告警配置
+joblog_view_log=查看日志
