--- a/xxl-job-admin/src/main/resources/i18n/message_en.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message_en.properties
@@ -274,3 +274,6 @@ user_update_loginuser_limit=Operation of current login account is not allowed
 ## help
 job_help=Tutorial
 job_help_document=Official Document
+alarm_type=alarm type
+alarm_config=alarm config
+joblog_view_log=view log
